--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>Welcome Influencer</title>
     <script src="https://kit.fontawesome.com/137c7d38c2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -27,14 +27,25 @@
     </header>
 
 <div class="products">
-    <div>
-
+    <div class="description">
+        <h1>Find Advertising Influencers</h1>
+        <p>Advertising influencer marketing doesn’t have to be hard – there’s no better way with access to your data and processes all in one place. Get a 7-day free trial, no credit card required.</p>
+        <a class="button" href="">Prebook now <i class="fas fa-arrow-right"></i></a>
     </div>
 
-    <div>
-
+    <div class="main-camera">
+        <div class="circle">
+        </div>
+        <div class="camera-position">
+            <img src="images/main-camera.png" alt="">
+        </div>
+        
+    
     </div>
+
+
 </div>
+
 
 </body>
 </html>
